# face_recognition

./: Cargo.toml  README.md  advanced_facial_features.py  dual_thread_face_recognition.py  hybrid_face_app.py  opencv_face_app.py  pyproject.toml
.github/instructions/: face.instructions.md
src/: lib.rs  vector_database.rs
